data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3656.wast
;; 5. **Test Description**: Call a function using an index that is out of the valid range of the function table.    - **Constraint Checked**: Ensures the function index (`funcidx`) is properly bounded within the valid range.    - **Improper Handling**: Tests if out-of-bounds indicators are correctly caught, preventing erroneous or unsafe function calls.

(assert_invalid
  (module
    (type (func))
    (func (result i32)
      (call 10)
    )
  )
  "unknown function"
)